--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
- },
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.30.2",
+    "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -20,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0"
   }
